--- a/client/index.html
+++ b/client/index.html
@@ -5,7 +5,7 @@
     <link
       rel="icon"
       type="image/svg+xml"
-      href="/vite.svg"
+      href="/cinem.svg"
     />
     <meta
       name="viewport"
